fixed issues on mobileview

--- a/src/components/layout/Menu/MainMenu.module.scss
+++ b/src/components/layout/Menu/MainMenu.module.scss
@@ -39,9 +39,9 @@
     @media screen and (max-width: 450px) {
       top: 200px;
       right: 0px;
-      width: 250px;
+      width: 290px;
       min-height: 375px;
-      padding: 15px 45px 40px 48px;
+      padding: 15px 45px 40px 10px;
     }
 
     .logo2 {
